# Taskify

./: .gitignore  README.md  api.py  app.py  forge.config.js  main.py  package-lock.json  package.json  prompt.md  requirements.txt  task_assignment.db  test.py  test_database.db  tsconfig.json  vite.config.ts  web_interface.html
electron/: main.ts  preload.ts
src/: App.css  App.tsx  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  ipc.rs  lib.rs  main.rs  notes.rs  transcription.rs
src/components/: InsightsDashboard.tsx  MeetingControlPanel.tsx  NotesEditor.tsx  TranscriptionWindow.tsx
src/lib/: utils.ts
src/store/: meetingStore.ts  settingsStore.ts
src/types/: index.ts
